name:                torrent
version:             0.1.0.0
synopsis:            Torrent client
description:         Please see README.md
homepage:            http://github.com/farnoy/torrent
license:             BSD3
license-file:        LICENSE
author:              Jakub Okoński
maintainer:          jakub@okonski.org
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Network.BitTorrent.Bencoding
                   , Network.BitTorrent.Bencoding.Lenses
                   , Network.BitTorrent.BitField
                   , Network.BitTorrent.Client
                   , Network.BitTorrent.FileWriter
                   , Network.BitTorrent.MetaInfo
                   , Network.BitTorrent.PeerMonad
                   , Network.BitTorrent.PeerSelection
                   , Network.BitTorrent.PWP
                   , Network.BitTorrent.Types
  other-modules:   Network.BitTorrent.Utility
                 , Network.BitTorrent.ChunkField
  ghc-options:   -Wall -O -fprof-auto -fno-warn-name-shadowing
  build-depends:   base >= 4.7 && < 5
                 , attoparsec
                 , binary
                 , bytestring
                 , bytestring-conversion
                 , containers
                 , cryptohash
                 , filepath
                 , free
                 , http-client
                 , http-types
                 , ieee754
                 , lens-family
                 , mtl
                 , network
                 , random
                 , stm
                 , unordered-containers
                 , uuid
                 , vector
  default-language:    Haskell2010

executable torrent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O -fprof-auto -fno-warn-name-shadowing
  build-depends:       base
                     , attoparsec
                     , async
                     , binary
                     , bytestring
                     , bytestring-conversion
                     , cryptohash
                     , http-client
                     , http-types
                     , lens-family
                     , network
                     , stm
                     , torrent
                     , unordered-containers
                     , uuid
                     , vector
  default-language:    Haskell2010

test-suite torrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules: BencodingSpec
               , BitFieldSpec
               , ClientSpec
               , Discover
               , MetaInfoSpec
               , PWPSpec
               , PeerMonadSpec
               , PeerSelectionSpec
               , SpecHelper

  build-depends:       base
                     , attoparsec
                     , async
                     , binary
                     , binary-literal-qq
                     , bytestring
                     , bytestring-conversion
                     , containers
                     , cryptohash
                     , directory
                     , filepath
                     , hspec
                     , http-client
                     , ieee754
                     , lens-family
                     , network
                     , random
                     , stm
                     , torrent
                     , unordered-containers
                     , uuid
                     , vector
                     , QuickCheck
                     , quickcheck-instances
  ghc-options:         -O -fno-warn-name-shadowing
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
