name:                torrent
version:             0.1.0.0
synopsis:            Torrent client
description:         Please see README.md
homepage:            http://github.com/farnoy/torrent
license:             BSD3
license-file:        LICENSE
author:              Jakub Okoński
maintainer:          jakub@okonski.org
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Network.BitTorrent.Bencoding
                   , Network.BitTorrent.Bencoding.Lenses
                   , Network.BitTorrent.BitField
                   , Network.BitTorrent.ChunkField
                   , Network.BitTorrent.Client
                   , Network.BitTorrent.FileWriter
                   , Network.BitTorrent.MetaInfo
                   , Network.BitTorrent.MemoryMonad
                   , Network.BitTorrent.PeerMonad
                   , Network.BitTorrent.PieceSelection
                   , Network.BitTorrent.PWP
                   , Network.BitTorrent.Types
  other-modules:   Network.BitTorrent.Utility
  ghc-options:   -Wall -O -fprof-auto -auto-all -caf-all -fno-warn-name-shadowing
  build-depends:   base >= 4.7 && < 5
                 , async
                 , attoparsec
                 , binary
                 , base64-bytestring
                 , bytestring
                 , bytestring-conversion
                 , containers
                 , cryptohash
                 , exceptions
                 , filepath
                 , free
                 , http-client
                 , http-types
                 , ieee754
                 , lens-family
                 , monad-logger
                 , mtl
                 , network
                 , random
                 , stm
                 , text
                 , time
                 , uuid
                 , vector
  default-language:    Haskell2010

executable torrent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O -fprof-auto -auto-all -fno-warn-name-shadowing
  build-depends:       base
                     , attoparsec
                     , async
                     , binary
                     , base64-bytestring
                     , bytestring
                     , bytestring-conversion
                     , cryptohash
                     , http-client
                     , http-types
                     , lens-family
                     , network
                     , stm
                     , torrent
                     , unix
                     , uuid
                     , vector
  default-language:    Haskell2010

test-suite torrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src test
  main-is:             Spec.hs
  other-modules: BencodingSpec
               , BitFieldSpec
               , ChunkFieldSpec
               , ClientSpec
               , Discover
               , MetaInfoSpec
               , PWPSpec
               , PeerMonadSpec
               , PieceSelectionSpec
               , SpecHelper

  build-depends:       base
                     , attoparsec
                     , async
                     , binary
                     , binary-literal-qq
                     , base64-bytestring
                     , bytestring
                     , bytestring-conversion
                     , containers
                     , cryptohash
                     , directory
                     , exceptions
                     , filepath
                     , free
                     , hspec
                     , hspec-smallcheck
                     , http-client
                     , ieee754
                     , lens-family
                     , monad-logger
                     , mtl
                     , network
                     , random
                     , smallcheck
                     , stm
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , vector
  ghc-options:         -O -auto-all -caf-all -fprof-auto -Wall -fno-warn-name-shadowing
  cpp-options: -DTESTING
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
