name:                torrent
version:             0.1.0.0
synopsis:            Torrent client
description:         Please see README.md
homepage:            http://github.com/farnoy/torrent
license:             BSD3
license-file:        LICENSE
author:              Jakub Okoński
maintainer:          jakub@okonski.org
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Network.BitTorrent.Bencoding
                   , Network.BitTorrent.Bencoding.Lenses
                   , Network.BitTorrent.BitField
                   , Network.BitTorrent.ChunkField
                   , Network.BitTorrent.Client
                   , Network.BitTorrent.DownloadProgress
                   , Network.BitTorrent.FileWriter
                   , Network.BitTorrent.LinkSpeed
                   , Network.BitTorrent.MetaInfo
                   , Network.BitTorrent.MemoryMonad
                   , Network.BitTorrent.PeerMonad
                   , Network.BitTorrent.PieceSelection
                   , Network.BitTorrent.PWP
                   , Network.BitTorrent.RPCServer
                   , Network.BitTorrent.Types
                   , Network.BitTorrent.Utility
  ghc-options:   -Wall -O2 -fprof-auto -caf-all -fno-warn-name-shadowing
  build-depends:   base >= 4.7 && < 5
                 , aeson
                 , async
                 , attoparsec
                 , binary
                 , base16-bytestring
                 , base64-bytestring
                 , bytestring
                 , bytestring-conversion
                 , containers
                 , cryptohash
                 , deepseq
                 , exceptions
                 , filepath
                 , flow
                 , free
                 , hashable
                 , http-client
                 , http-types
                 , ieee754
                 , lens-family
                 , monad-logger
                 , mtl
                 , network
                 , random
                 , scotty
                 , stm
                 , stm-containers
                 , text
                 , time
                 , transformers
                 , ttrie
                 , unix
                 , uuid
                 , vector
  default-language:    Haskell2010

executable torrent
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -Wall -O2 -fprof-auto -fno-warn-name-shadowing
  build-depends:       base
                     , attoparsec
                     , async
                     , binary
                     , base64-bytestring
                     , bytestring
                     , bytestring-conversion
                     , containers
                     , cryptohash
                     , http-client
                     , http-types
                     , lens-family
                     , network
                     , scotty
                     , stm
                     , torrent
                     , unix
                     , uuid
                     , vector
  default-language:    Haskell2010

test-suite torrent-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules: BencodingSpec
               , BitFieldSpec
               , ChunkFieldSpec
               , ClientSpec
               , Discover
               , FileWriterSpec
               , MetaInfoSpec
               , PWPSpec
               , PeerMonadSpec
               , PieceSelectionSpec
               , SpecHelper

  build-depends:       base
                     , attoparsec
                     , async
                     , binary
                     , base64-bytestring
                     , bytestring
                     , bytestring-conversion
                     , containers
                     , cryptohash
                     , deepseq
                     , directory
                     , exceptions
                     , filepath
                     , free
                     , hspec
                     , hspec-smallcheck
                     , http-client
                     , ieee754
                     , lens-family
                     , monad-logger
                     , mtl
                     , network
                     , quickcheck-instances
                     , QuickCheck
                     , random
                     , smallcheck
                     , stm
                     , text
                     , torrent
                     , time
                     , unordered-containers
                     , uuid
                     , vector
  ghc-options:         -O2 -auto-all -caf-all -fprof-auto -Wall -fno-warn-name-shadowing
  cpp-options: -DTESTING
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
